DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/amc__Billing_Event__c.object-meta.xml
<CustomObject>
    <description>The Billing Event Object enables users to specify the header detail of a billing event (e.g. invoice / credit)</description>
    <label>Billing Event</label>
    <nameField>
        <label>Billing Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>