DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Account__c.field-meta.xml
<CustomField>
    <fullName>amc__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Account the Billing Event should be linked to, if it is not the Account specified on the Project</description>
    <inlineHelpText>Identifies the Account the Billing Event should be linked to, if it is not the Account specified on the Project</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>