DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Paid__c</fullName>
    <formula>amc__Total_Paid__c -  amc__Tax_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>