DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Contact__c.field-meta.xml
<CustomField>
    <fullName>amc__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Contact the Billing Event should be linked to, if it is not the Contact specified on the Project</description>
    <inlineHelpText>Identifies the Contact the Billing Event should be linked to, if it is not the Contact specified on the Project</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.amc__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>