DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Deposit__c.field-meta.xml
<CustomField>
    <fullName>amc__Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this field to TRUE if this Billing Event is a Deposit Invoice for a Project that is using the &apos;Deposit to T&amp;M&apos; Billing Type</inlineHelpText>
    <label>Deposit</label>
    <type>Checkbox</type>
</CustomField>