DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Due_Date__c</fullName>
    <inlineHelpText>Identifies the date the Invoice / Credit is due to be settled by</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>