DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>