DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Date__c</fullName>
    <inlineHelpText>Identifies the Invoice Date for this Billing Event</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>