DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <inlineHelpText>Generates a sequential number</inlineHelpText>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>