DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Template__c</fullName>
    <inlineHelpText>Identifies whether the Summary or Detail Template is used when generating the Invoice PDF</inlineHelpText>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
                <default>true</default>
                <label>Summary</label>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>