DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Billing Event is Milestone based, this will be populated with the relevant Milestone.</description>
    <inlineHelpText>If the Billing Event is Milestone based, this will be populated with the relevant Milestone.</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Milestone__c.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.amc__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>