DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>amc__PDF_URL__c</fullName>
    <inlineHelpText>Details the URL Link of the Invoice / Credit Note PDF for sharing externally</inlineHelpText>
    <label>PDF URL</label>
    <type>Url</type>
</CustomField>