DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Status__c</fullName>
    <inlineHelpText>Identifies the status of the Billing Event</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>