DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Amount__c</fullName>
    <inlineHelpText>Roll Up Summary of all related Billing Item records. Sum of ‘Tax Amount’ field</inlineHelpText>
    <label>Tax Amount</label>
    <summarizedField>amc__Billing_Event_Item__c.amc__Tax_Amount__c</summarizedField>
    <summaryForeignKey>amc__Billing_Event_Item__c.amc__Billing_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>