DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Amount__c</fullName>
    <formula>amc__Amount__c +  amc__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the Total Amount of this Billing Event (Amount + Tax Amount)</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>