DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Outstanding__c</fullName>
    <formula>amc__Total_Amount__c -  amc__Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the Total Outstanding of this Billing Event (Total Amount – Total Paid)</inlineHelpText>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>