DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/fields/amc__Update_PDF__c.field-meta.xml
<CustomField>
    <fullName>amc__Update_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the attached invoice is out of date and needs updating. Click the View Invoice button to manually update. Invoices get automatically updated within 5 minutes.</description>
    <inlineHelpText>Indicates the attached invoice is out of date and needs updating. Click the View Invoice button to manually update. Invoices get automatically updated within 5 minutes.</inlineHelpText>
    <label>Update PDF</label>
    <type>Checkbox</type>
</CustomField>