DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/validationRules/amc__Ensure_Billing_Cycle_is_Manual.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Billing_Cycle_is_Manual</fullName>
    <active>true</active>
    <description>Ensure the Billing Cycle on the Project is set to Manual if the User is trying to use the &apos;Auto Add&apos; fields</description>
    <errorConditionFormula>AND(OR( amc__Auto_Add_Expenses__c , amc__Auto_Add_Time_Logs__c ), NOT(ISPICKVAL( amc__Project__r.amc__Billing_Cycle__c , &quot;Manual&quot;)))</errorConditionFormula>
    <errorMessage>You can only use the Auto Add field(s) if the Project Billing Type = Manual</errorMessage>
</ValidationRule>