DigicielFull/force-app/main/default/objects/amc__Billing_Event__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Type__c</columns>
    <columns>amc__Invoice_Date__c</columns>
    <columns>amc__Invoice_Number__c</columns>
    <columns>amc__Project__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Milestone__c</columns>
    <columns>amc__Due_Date__c</columns>
    <columns>amc__Tax_Label__c</columns>
    <columns>amc__Total_Amount__c</columns>
    <columns>amc__Tax_Amount__c</columns>
    <columns>amc__Total_Paid__c</columns>
    <columns>amc__Total_Outstanding__c</columns>
    <columns>amc__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>